[package]
name = "netrc-rs"
version = "0.1.0"
authors = ["yjhmelody <465402634@qq.com>"]
edition = "2018"
keywords = ["parser", "netrc", "no-std"]
categories = ["parser"]
documentation = "https://docs.rs/netrc-rs"
description = "Parser for .netrc file"
homepage = "https://github.com/yjhmelody/netrc-rs"
repository = "https://github.com/yjhmelody/netrc-rs"
readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
